# ZPass-Mobile-Plugin-LevelDB

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.sh  justfile  pubspec.yaml
.cargo/: config.toml
android/: build.gradle
example/: pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flkv.podspec
ios/Classes/: SwiftFlkvPlugin.swift  binding.h
lib/: bridge_definitions.dart  bridge_generated.dart  ffi.dart  flkv.dart
lib/src/: basic_db.dart  db_wrap.dart  native.dart  zpass_db.dart
src/: lib.rs
src/flutter_bridge/: api.rs  bridge_generated.io.rs  bridge_generated.rs  mod.rs
test/: flkv_test.dart
