[package]
name = "flkv"
version = "0.1.0"
edition = "2018"


[lib]
name = "flkv"
crate-type = ["cdylib", "staticlib"]


[dependencies]
rusty-leveldb = "1.0.4"
log = "0.4"
flutter_rust_bridge = "1"
once_cell = "1.15.0"

[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.11"


[build-dependencies]
cbindgen = "0.24.3"

[profile.release]
opt-level = 'z'
panic = 'abort'
lto = true
codegen-units = 1
